# Resnet50-Trained-On-ImageNet

./: .gitignore  Labels.json  README.md  calculate_accuracy.py  hyperparameter_tuning_script.py  imagenet_index_to_wnid.json  mapping_indexes_wnids.py  model.py  model_resnet18.py  train.py  train_resnet18.py  video_inferencing.py  video_predictions_golden10.txt  video_predictions_golden1000.txt  video_predictions_golden_cpu.txt
CPP_RELATED/: CMakeLists.txt  README.md  arm_calculate_accuracy.cpp  build_arm.sh  build_dsp.sh  calculate_accuracy.cpp  run.sh  run_accuracy.sh  snapdragon_dsp_tools_setup.txt  video_infer_x86.cpp
CPP_RELATED/arm/: arm_wrapper.cpp
CPP_RELATED/dsp/: resnet_infer_imp.cpp
CPP_RELATED/idl/: resnet_infer.idl
CPP_RELATED/inc/: resnet_infer.h
Pruning/: config.py  datamodule.py  find_lr.py  lightning_module.py  losses.py  model.py  pruning.py  train.py
Training/: data_module.py  model_module.py  train.py  transforms.py
